--- a/src/lib/styles/global.css
+++ b/src/lib/styles/global.css
@@ -34,19 +34,9 @@
             flex-grow: 1;
         }
     }
-    .truco-background {
-        display: flex;
-        overflow: hidden;
-        flex-direction: column;
-        border-radius: 2rem;
-        background-color: var(--p30);
-        transition: background-color .5s ease;
-        border: 1px solid var(--p50);
-        flex-grow: 1;
-        animation: slide-left .4s ease-out;
-        &:first-child {
-            animation: slide-right .4s ease-out;
-        }
+    .name {
+        color: var(--c);
+        font-weight: bold;
     }
     button {
         display: flex;
