borrowed colors from some other project

--- a/src/lib/styles/global.css
+++ b/src/lib/styles/global.css
@@ -35,7 +35,7 @@
         }
     }
     .name {
-        color: var(--c);
+        color: var(--p50);
         font-weight: bold;
     }
     button {
